Fix tab shortcuts overlapping user menu

--- a/vodafone-global-storefront-theme/themes/vodafone/assets/css/custom/_custom.scss
+++ b/vodafone-global-storefront-theme/themes/vodafone/assets/css/custom/_custom.scss
@@ -697,7 +697,7 @@ p {
   position: fixed;
   top: 77px;
   left: 0;
-  z-index: 90;
+  z-index: 16;
   width: 100%;
 }
 
